--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -184,6 +184,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ":@react-native-firebase_auth")
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
