--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@react-native-community/netinfo": "^6.0.2",
     "@react-native-firebase/app": "^12.9.1",
     "@react-native-firebase/auth": "^12.9.1",
     "@react-navigation/drawer": "^6.1.6",
